# OpenPFO

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.toml  pyproject.toml  requirements-hpc.txt  requirements-local.txt  requirements.txt
.OpenPFO/: README.md  config.toml  create_geometry.py  create_mesh.py  execute_cleanup.py  execute_solver.py  extract_assets.py  extract_objectives.py  modify_case.py  objective_function.py  side_effects.py
.OpenPFO/pfo/: 0_prepare.py  1_geometry.py  2_mesh.py  3_solve.py  4_objectives.py  5_cleanup.py
input/: README.md  __init__.py  compress.sh  init.sh  model.FCStd  model.vsp3  pfo.sh  pvbatch.py
journal/: JOURNAL.md  paper.bib
paper/: paper.bib  paper.md
pfo/: 0_create_geometry.py  0_prepare.py  1_geometry.py  1_modify_case.py  2_create_mesh.py  2_mesh.py  3_execute_solver.py  3_solve.py  4_extract_objectives.py  4_objectives.py  5_cleanup.py  5_extract_assets.py  6_execute_cleanup.py  A_create_algorithm.py  A_optimizer.py  create_mesh.py  execute_cleanup.py  extract_assets.py  extract_objectives.py
pfo/classes/: job.py  (+12 more)
report/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts
scripts/: cleanup-job.sh  compress.sh  init-hpc.sh  init-local.sh  init.sh  output.sh  pfo.sh  test.sh  vacuum.sh
src/: cli.py  create_algorithm.py  create_commands.py  create_geometry.py  create_mesh.py  create_meshes.py  create_run.py  execute_cleanup.py  execute_solver.py  extract_assets.py  extract_objectives.py  main.py  modify_case.py  optimizers.py
tests/: conftest.py
(+337 files in other folders)
